:art: Fix Grid items vertically stretching to fill container

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -65,7 +65,7 @@ header form input[type="submit"] {
 #searched-image img {
   display: block;
   margin: 0 auto;
-  min-width: 50vw;
+  /* min-width: 50vw; */
   width: 100%; /* Makes images responsive. Parent is `main` */
 }
 
@@ -88,6 +88,7 @@ header form input[type="submit"] {
 footer {
   width: 100%;
   height: 50px;
+  margin-top: 3em;
   /* position: fixed; */
   bottom: 0;
   background-color: var(--mintGreen);
@@ -103,6 +104,9 @@ footer p { text-align: center; }
 @media screen and (min-width: 55rem) {
   .App main {
     width: 55rem;
+  }
+  #searched-image img {
+    width: 80%;
   }
 }
 
@@ -153,10 +157,12 @@ header h1 {
 
   main {
     display: grid;
+    align-items: start;
+    grid-auto-rows: minmax(min-content, max-content);
   }
 
   #goal-message {
-    display: block;
+    display: block; /* Can't add margin-top to inline */
     margin-top: 20px;
     /* align-self: start; */
   }
